Dumped all styles from site.

--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -1,3 +1,12 @@
+<!doctype html>
+<html>
+<link rel="stylesheet" href="style.css">
+<head>
+</head>
+<body>
+
+<div id="dp">
+
 <div id="sims-fbt" class="bucket">
         <hr class="a-divider-normal bucketDivider"><h2>Frequently Bought Together</h2>
         <div id="sims-fbt-container" data-p13n-feature-metadata="{&quot;baseAsin&quot;:&quot;B0002EOIR0&quot;,&quot;has_seller_difference&quot;:&quot;0&quot;,&quot;has_diff_avail&quot;:&quot;0&quot;}" data-p13n-feature-name="pd_bxgy_267" data-p13n-global="{&quot;marketplace&quot;:&quot;US&quot;,&quot;requestId&quot;:&quot;77H45FM0G6NQRWGBJ309&quot;,&quot;marketplaceId&quot;:&quot;ATVPDKIKX0DER&quot;,&quot;session&quot;:&quot;157-7260647-1527555&quot;}" class="a-container">
@@ -23,3 +32,8 @@
             </div>
         </div>
     </div>
+
+</div>
+
+</body>
+</html>
