--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -8,30 +8,138 @@
 <div id="dp">
 
 <div id="sims-fbt" class="bucket">
-        <hr class="a-divider-normal bucketDivider"><h2>Frequently Bought Together</h2>
-        <div id="sims-fbt-container" data-p13n-feature-metadata="{&quot;baseAsin&quot;:&quot;B0002EOIR0&quot;,&quot;has_seller_difference&quot;:&quot;0&quot;,&quot;has_diff_avail&quot;:&quot;0&quot;}" data-p13n-feature-name="pd_bxgy_267" data-p13n-global="{&quot;marketplace&quot;:&quot;US&quot;,&quot;requestId&quot;:&quot;77H45FM0G6NQRWGBJ309&quot;,&quot;marketplaceId&quot;:&quot;ATVPDKIKX0DER&quot;,&quot;session&quot;:&quot;157-7260647-1527555&quot;}" class="a-container">
-            <div id="sims-fbt-content">
-                <form id="sims-fbt-form" name="BuyXGetYhandleBuy" method="post" action="/gp/item-dispatch/ref=pd_bxgy_267_button_crt?ie=UTF8&amp;refRID=77H45FM0G6NQRWGBJ309" autocomplete="off">
-                <input type="hidden" name="session-id" value="157-7260647-1527555"><input type="hidden" name="discoveredAsins.1" value="B0002NRTMC">
-                <div>
-                    <ul class="a-nostyle a-horizontal a-spacing-base a-spacing-top-base sims-fbt-image-box">
-        <li class="a-align-center sims-fbt-image-1"><span class="a-list-item"><div class="a-section"><img alt="American DJ Haze Generator Heaterless Fog Machine" src="https://images-na.ssl-images-amazon.com/images/I/41Mp8HpjHvL._AC_UL115_.jpg" class="sims-fbt-image"></div></span></li><li class="a-align-center sims-fbt-plus-2"><span class="a-list-item a-size-large a-color-tertiary">+</span></li><li class="a-align-center sims-fbt-image-2"><span class="a-list-item"><a class="a-link-normal" href="/American-DJ-HAZE-G-Haze-G/dp/B0002NRTMC/ref=pd_bxgy_267_img_2?ie=UTF8&amp;psc=1&amp;refRID=77H45FM0G6NQRWGBJ309"><div class="a-section"><img alt="American DJ Haze/G" src="https://images-na.ssl-images-amazon.com/images/I/31EgPO9ISzL._AC_UL115_.jpg" class="sims-fbt-image"></div></a></span></li>
-        </ul>
-                    <div class="sims-fbt-price-box">
-                        <div class="sims-fbt-total-price"><span class="a-size-base a-color-secondary sims-fbt-total-price-text">Total price: </span><span class="a-size-medium a-color-price sims-fbt-total-price-value">$473.98</span></div>
-                        <div class="sims-fbt-buttons"><div class="a-button-stack a-spacing-mini">
-                            <span class="a-button a-button-primary a-button-small sims-fbt-add-to-cart" id="a-autoid-9"><span class="a-button-inner"><input name="submit.addToCart" class="a-button-input" type="submit" aria-labelledby="a-autoid-9-announce"><span class="a-button-text" aria-hidden="true" id="a-autoid-9-announce">Add both to Cart</span></span></span>
-                            <span id="fbt_add_to_wishlist" class="a-button a-button-normal a-button-thumbnail a-button-small sims-fbt-add-to-wishlist"><span class="a-button-inner"><input name="submit.add-to-registry.wishlist" class="a-button-input" type="submit" aria-labelledby="fbt_add_to_wishlist-announce"><span id="fbt_add_to_wishlist-announce" class="a-button-text a-text-center" aria-hidden="true">Add both to List</span></span></span>
-                        </div></div>
-                        <script type="a-state" data-a-state="{&quot;key&quot;:&quot;sims-fbt&quot;}">{"addToCartText":{"1":"Add to Cart","3":"Add all three to Cart","2":"Add both to Cart"},"allOfferListingIDs":["2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D","FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D"],"currencySymbol":"$<span class=\"sims-fbt-price-value\"></span>","currencyCode":"USD","MAPText":"To see our price, add these items to your cart. <a class=\"a-link-normal sims-fbt-map-details-link\" href=\"/gp/feature.html/ref=pd_bxgy_267_map?ie=UTF8&docId=174014&refRID=77H45FM0G6NQRWGBJ309\">Why don't we show the price?</a>","shippingDetails":{"12":"seller"},"itemDetails":{"2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D":{"asin":"B0002EOIR0","isPreorder":0,"price":429.99,"doesMAPPolicyApply":0},"FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D":{"asin":"B0002NRTMC","isPreorder":0,"price":43.99,"doesMAPPolicyApply":0}},"addToWishListText":{"1":"Add to List","3":"Add all three to List","2":"Add both to List"},"preOrderText":null,"fbtStrings":{"showDetails":"Show details","showDetailsLong":"Show availability and shipping details","differentSellers":"These items are shipped from and sold by different sellers.","noDetails":"Choose items to buy together.","hideDetailsLong":"Hide availability and shipping details","hideDetails":"Hide details"}}</script>
-                    </div>
-                </div>
-                <div class="sims-fbt-details-link"><div class="a-box a-alert-inline a-alert-inline-info"><div class="a-box-inner a-alert-container"><i class="a-icon a-icon-alert"></i><div class="a-alert-content"><span class="a-size-mini sims-fbt-shipping-details-text">These items are shipped from and sold by different sellers.</span> <a class="a-size-mini a-link-normal a-declarative" href="#">Show details</a></div></div></div></div>
-                <div class="sims-fbt-rows"><fieldset class="forScreenreaders"><legend><span>Buy the selected items together</span></legend><ul class="a-nostyle a-vertical"><li data-p13n-asin-metadata="{&quot;ref&quot;:&quot;pd_bxgy_267_1_1&quot;,&quot;price&quot;:429.99,&quot;asin&quot;:&quot;B0002EOIR0&quot;}" class="a-spacing-mini p13n-asin"><span class="a-list-item"><span class="a-declarative" data-action="fbt-checkbox-click" data-fbt-checkbox-click="{&quot;itemNum&quot;:&quot;1&quot;,&quot;offerListingID&quot;:&quot;2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D&quot;,&quot;asin&quot;:&quot;B0002EOIR0&quot;}"><div data-a-input-name="offeringID.1" class="a-checkbox sims-fbt-checkbox"><label><input type="checkbox" name="offeringID.1" value="2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D" checked="" style="display: inline-block;"><i class="a-icon a-icon-checkbox"></i><span class="a-label a-checkbox-label"><div class="sims-fbt-checkbox-label"><span class="sims-fbt-this-item a-text-bold">This item:</span><span>American DJ Haze Generator Heaterless Fog Machine</span> <span class="a-color-price">$429.99</span> <div class="a-row a-spacing-micro a-spacing-top-micro a-size-small a-color-secondary sims-fbt-seller-info"><div class="a-row"><span class="a-size-base a-color-success">In Stock.</span></div><div class="a-row"><span class="a-size-base a-color-secondary a-text-normal">Ships from and sold by Full Compass Systems.</span></div><div class="a-row"><span class="a-size-base a-color-secondary a-text-normal">FREE Shipping </span></div></div></div></span></label></div></span></span></li><li data-p13n-asin-metadata="{&quot;ref&quot;:&quot;pd_bxgy_267_2_2&quot;,&quot;price&quot;:43.99,&quot;asin&quot;:&quot;B0002NRTMC&quot;}" class="a-spacing-mini p13n-asin"><span class="a-list-item"><span class="a-declarative" data-action="fbt-checkbox-click" data-fbt-checkbox-click="{&quot;itemNum&quot;:&quot;2&quot;,&quot;offerListingID&quot;:&quot;FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D&quot;,&quot;asin&quot;:&quot;B0002NRTMC&quot;}"><div data-a-input-name="offeringID.2" class="a-checkbox sims-fbt-checkbox"><label><input type="checkbox" name="offeringID.2" value="FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D" checked="" style="display: inline-block;"><i class="a-icon a-icon-checkbox"></i><span class="a-label a-checkbox-label"><div class="sims-fbt-checkbox-label"><a class="a-size-base a-link-normal" href="/American-DJ-HAZE-G-Haze-G/dp/B0002NRTMC/ref=pd_bxgy_267_2?ie=UTF8&amp;psc=1&amp;refRID=77H45FM0G6NQRWGBJ309">American DJ Haze/G</a> <span class="a-color-price">$43.99</span> <div class="a-row a-spacing-micro a-spacing-top-micro a-size-small a-color-secondary sims-fbt-seller-info"><div class="a-row"><span class="a-size-base a-color-success">In Stock.</span></div><div class="a-row"><span class="a-size-base a-color-secondary a-text-normal">Ships from and sold by The Blacklight Store.</span></div><div class="a-row"><span class="a-size-base a-color-secondary a-text-normal">FREE Shipping </span></div></div></div></span></label></div></span></span></li></ul></fieldset></div>
-                </form>
-            </div>
-        </div>
-    </div>
+	<h2>Frequently Bought Together</h2>
+	<div id="sims-fbt-container" data-p13n-feature-metadata="{&quot;baseAsin&quot;:&quot;B0002EOIR0&quot;,&quot;has_seller_difference&quot;:&quot;0&quot;,&quot;has_diff_avail&quot;:&quot;0&quot;}" data-p13n-feature-name="pd_bxgy_267" data-p13n-global="{&quot;marketplace&quot;:&quot;US&quot;,&quot;requestId&quot;:&quot;77H45FM0G6NQRWGBJ309&quot;,&quot;marketplaceId&quot;:&quot;ATVPDKIKX0DER&quot;,&quot;session&quot;:&quot;157-7260647-1527555&quot;}" class="a-container">
+		<div id="sims-fbt-content">
+			<form id="sims-fbt-form" name="BuyXGetYhandleBuy" method="post" action="/gp/item-dispatch/ref=pd_bxgy_267_button_crt?ie=UTF8&amp;refRID=77H45FM0G6NQRWGBJ309" autocomplete="off">
+				<input type="hidden" name="session-id" value="157-7260647-1527555">
+				<input type="hidden" name="discoveredAsins.1" value="B0002NRTMC">
+				<div>
+					<ul class="a-nostyle a-horizontal a-spacing-base a-spacing-top-base sims-fbt-image-box">
+						<li class="a-align-center sims-fbt-image-1">
+							<span class="a-list-item">
+								<div class="a-section">
+									<img alt="American DJ Haze Generator Heaterless Fog Machine" src="https://images-na.ssl-images-amazon.com/images/I/41Mp8HpjHvL._AC_UL115_.jpg" class="sims-fbt-image">
+								</div>
+							</span>
+						</li>
+						<li class="a-align-center sims-fbt-plus-2">
+							<span class="a-list-item a-size-large a-color-tertiary">+</span>
+						</li>
+						<li class="a-align-center sims-fbt-image-2">
+							<span class="a-list-item">
+								<a class="a-link-normal" href="/American-DJ-HAZE-G-Haze-G/dp/B0002NRTMC/ref=pd_bxgy_267_img_2?ie=UTF8&amp;psc=1&amp;refRID=77H45FM0G6NQRWGBJ309">
+									<div class="a-section">
+										<img alt="American DJ Haze/G" src="https://images-na.ssl-images-amazon.com/images/I/31EgPO9ISzL._AC_UL115_.jpg" class="sims-fbt-image">
+									</div>
+								</a>
+							</span>
+						</li>
+					</ul>
+					<div class="sims-fbt-price-box">
+						<div class="sims-fbt-total-price">
+							<span class="a-size-base a-color-secondary sims-fbt-total-price-text">Total price: </span>
+							<span class="a-size-medium a-color-price sims-fbt-total-price-value">$473.98</span>
+						</div>
+						<div class="sims-fbt-buttons">
+							<div class="a-button-stack a-spacing-mini">
+								<span class="a-button a-button-primary a-button-small sims-fbt-add-to-cart" id="a-autoid-9">
+									<span class="a-button-inner">
+										<input name="submit.addToCart" class="a-button-input" type="submit" aria-labelledby="a-autoid-9-announce">
+										<span class="a-button-text" aria-hidden="true" id="a-autoid-9-announce">Add both to Cart</span>
+									</span>
+								</span>
+								<span id="fbt_add_to_wishlist" class="a-button a-button-normal a-button-thumbnail a-button-small sims-fbt-add-to-wishlist">
+									<span class="a-button-inner">
+										<input name="submit.add-to-registry.wishlist" class="a-button-input" type="submit" aria-labelledby="fbt_add_to_wishlist-announce">
+										<span id="fbt_add_to_wishlist-announce" class="a-button-text a-text-center" aria-hidden="true">Add both to List</span>
+									</span>
+								</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="sims-fbt-details-link">
+					<div class="a-box a-alert-inline a-alert-inline-info">
+						<div class="a-box-inner a-alert-container">
+							<i class="a-icon a-icon-alert"></i>
+							<div class="a-alert-content">
+								<span class="a-size-mini sims-fbt-shipping-details-text">These items are shipped from and sold by different sellers.</span>
+								<a class="a-size-mini a-link-normal a-declarative" href="#">Show details</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="sims-fbt-rows">
+					<fieldset class="forScreenreaders">
+						<legend><span>Buy the selected items together</span></legend>
+						<ul class="a-nostyle a-vertical">
+							<li data-p13n-asin-metadata="{&quot;ref&quot;:&quot;pd_bxgy_267_1_1&quot;,&quot;price&quot;:429.99,&quot;asin&quot;:&quot;B0002EOIR0&quot;}" class="a-spacing-mini p13n-asin">
+								<span class="a-list-item">
+									<span class="a-declarative" data-action="fbt-checkbox-click" data-fbt-checkbox-click="{&quot;itemNum&quot;:&quot;1&quot;,&quot;offerListingID&quot;:&quot;2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D&quot;,&quot;asin&quot;:&quot;B0002EOIR0&quot;}">
+										<div data-a-input-name="offeringID.1" class="a-checkbox sims-fbt-checkbox">
+											<label>
+												<input type="checkbox" name="offeringID.1" value="2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D" checked="" style="display: inline-block;">
+												<i class="a-icon a-icon-checkbox"></i>
+												<span class="a-label a-checkbox-label">
+													<div class="sims-fbt-checkbox-label">
+														<span class="sims-fbt-this-item a-text-bold">This item:</span>
+														<span>American DJ Haze Generator Heaterless Fog Machine</span>
+														<span class="a-color-price">$429.99</span>
+														<div class="a-row a-spacing-micro a-spacing-top-micro a-size-small a-color-secondary sims-fbt-seller-info">
+															<div class="a-row">
+																<span class="a-size-base a-color-success">In Stock.</span>
+															</div>
+															<div class="a-row">
+																<span class="a-size-base a-color-secondary a-text-normal">Ships from and sold by Full Compass Systems.</span>
+															</div>
+															<div class="a-row">
+																<span class="a-size-base a-color-secondary a-text-normal">FREE Shipping </span>
+															</div>
+														</div>
+													</div>
+												</span>
+											</label>
+										</div>
+									</span>
+								</span>
+							</li>
+							<li data-p13n-asin-metadata="{&quot;ref&quot;:&quot;pd_bxgy_267_2_2&quot;,&quot;price&quot;:43.99,&quot;asin&quot;:&quot;B0002NRTMC&quot;}" class="a-spacing-mini p13n-asin">
+								<span class="a-list-item">
+									<span class="a-declarative" data-action="fbt-checkbox-click" data-fbt-checkbox-click="{&quot;itemNum&quot;:&quot;2&quot;,&quot;offerListingID&quot;:&quot;FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D&quot;,&quot;asin&quot;:&quot;B0002NRTMC&quot;}">
+										<div data-a-input-name="offeringID.2" class="a-checkbox sims-fbt-checkbox">
+											<label>
+												<input type="checkbox" name="offeringID.2" value="FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D" checked="" style="display: inline-block;">
+												<i class="a-icon a-icon-checkbox"></i>
+												<span class="a-label a-checkbox-label">
+													<div class="sims-fbt-checkbox-label">
+														<a class="a-size-base a-link-normal" href="/American-DJ-HAZE-G-Haze-G/dp/B0002NRTMC/ref=pd_bxgy_267_2?ie=UTF8&amp;psc=1&amp;refRID=77H45FM0G6NQRWGBJ309">American DJ Haze/G</a>
+														<span class="a-color-price">$43.99</span>
+														<div class="a-row a-spacing-micro a-spacing-top-micro a-size-small a-color-secondary sims-fbt-seller-info">
+															<div class="a-row">
+																<span class="a-size-base a-color-success">In Stock.</span>
+															</div>
+															<div class="a-row">
+																<span class="a-size-base a-color-secondary a-text-normal">Ships from and sold by The Blacklight Store.</span>
+															</div>
+															<div class="a-row">
+																<span class="a-size-base a-color-secondary a-text-normal">FREE Shipping </span>
+															</div>
+														</div>
+													</div>
+												</span>
+											</label>
+										</div>
+									</span>
+								</span>
+							</li>
+						</ul>
+					</fieldset>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
 
 </div>
 
