Removed unused IDs.

--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -7,10 +7,10 @@
 
 <div id="dp">
 
-<div id="sims-fbt" class="bucket">
+<div class="bucket">
 	<h2>Frequently Bought Together</h2>
-	<div id="sims-fbt-container" data-p13n-feature-metadata="{&quot;baseAsin&quot;:&quot;B0002EOIR0&quot;,&quot;has_seller_difference&quot;:&quot;0&quot;,&quot;has_diff_avail&quot;:&quot;0&quot;}" data-p13n-feature-name="pd_bxgy_267" data-p13n-global="{&quot;marketplace&quot;:&quot;US&quot;,&quot;requestId&quot;:&quot;77H45FM0G6NQRWGBJ309&quot;,&quot;marketplaceId&quot;:&quot;ATVPDKIKX0DER&quot;,&quot;session&quot;:&quot;157-7260647-1527555&quot;}" class="a-container">
-		<div id="sims-fbt-content">
+	<div data-p13n-feature-metadata="{&quot;baseAsin&quot;:&quot;B0002EOIR0&quot;,&quot;has_seller_difference&quot;:&quot;0&quot;,&quot;has_diff_avail&quot;:&quot;0&quot;}" data-p13n-feature-name="pd_bxgy_267" data-p13n-global="{&quot;marketplace&quot;:&quot;US&quot;,&quot;requestId&quot;:&quot;77H45FM0G6NQRWGBJ309&quot;,&quot;marketplaceId&quot;:&quot;ATVPDKIKX0DER&quot;,&quot;session&quot;:&quot;157-7260647-1527555&quot;}" class="a-container">
+		<div>
 			<form id="sims-fbt-form" name="BuyXGetYhandleBuy" method="post" action="/gp/item-dispatch/ref=pd_bxgy_267_button_crt?ie=UTF8&amp;refRID=77H45FM0G6NQRWGBJ309" autocomplete="off">
 				<input type="hidden" name="session-id" value="157-7260647-1527555">
 				<input type="hidden" name="discoveredAsins.1" value="B0002NRTMC">
@@ -43,16 +43,16 @@
 						</div>
 						<div class="sims-fbt-buttons">
 							<div class="a-button-stack a-spacing-mini">
-								<span class="a-button a-button-primary a-button-small sims-fbt-add-to-cart" id="a-autoid-9">
+								<span class="a-button a-button-primary a-button-small sims-fbt-add-to-cart">
 									<span class="a-button-inner">
 										<input name="submit.addToCart" class="a-button-input" type="submit" aria-labelledby="a-autoid-9-announce">
-										<span class="a-button-text" aria-hidden="true" id="a-autoid-9-announce">Add both to Cart</span>
+										<span class="a-button-text" aria-hidden="true">Add both to Cart</span>
 									</span>
 								</span>
-								<span id="fbt_add_to_wishlist" class="a-button a-button-normal a-button-thumbnail a-button-small sims-fbt-add-to-wishlist">
+								<span class="a-button a-button-normal a-button-thumbnail a-button-small sims-fbt-add-to-wishlist">
 									<span class="a-button-inner">
 										<input name="submit.add-to-registry.wishlist" class="a-button-input" type="submit" aria-labelledby="fbt_add_to_wishlist-announce">
-										<span id="fbt_add_to_wishlist-announce" class="a-button-text a-text-center" aria-hidden="true">Add both to List</span>
+										<span class="a-button-text a-text-center" aria-hidden="true">Add both to List</span>
 									</span>
 								</span>
 							</div>
