Removed unused data attributes.

--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -9,7 +9,7 @@
 
 <div class="bucket">
 	<h2>Frequently Bought Together</h2>
-	<div data-p13n-feature-metadata="{&quot;baseAsin&quot;:&quot;B0002EOIR0&quot;,&quot;has_seller_difference&quot;:&quot;0&quot;,&quot;has_diff_avail&quot;:&quot;0&quot;}" data-p13n-feature-name="pd_bxgy_267" data-p13n-global="{&quot;marketplace&quot;:&quot;US&quot;,&quot;requestId&quot;:&quot;77H45FM0G6NQRWGBJ309&quot;,&quot;marketplaceId&quot;:&quot;ATVPDKIKX0DER&quot;,&quot;session&quot;:&quot;157-7260647-1527555&quot;}" class="a-container">
+	<div class="a-container">
 		<div>
 			<form id="sims-fbt-form" name="BuyXGetYhandleBuy" method="post" action="/gp/item-dispatch/ref=pd_bxgy_267_button_crt?ie=UTF8&amp;refRID=77H45FM0G6NQRWGBJ309" autocomplete="off">
 				<input type="hidden" name="session-id" value="157-7260647-1527555">
@@ -74,10 +74,10 @@
 					<fieldset class="forScreenreaders">
 						<legend><span>Buy the selected items together</span></legend>
 						<ul class="a-nostyle a-vertical">
-							<li data-p13n-asin-metadata="{&quot;ref&quot;:&quot;pd_bxgy_267_1_1&quot;,&quot;price&quot;:429.99,&quot;asin&quot;:&quot;B0002EOIR0&quot;}" class="a-spacing-mini p13n-asin">
+							<li class="a-spacing-mini p13n-asin">
 								<span class="a-list-item">
-									<span class="a-declarative" data-action="fbt-checkbox-click" data-fbt-checkbox-click="{&quot;itemNum&quot;:&quot;1&quot;,&quot;offerListingID&quot;:&quot;2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D&quot;,&quot;asin&quot;:&quot;B0002EOIR0&quot;}">
-										<div data-a-input-name="offeringID.1" class="a-checkbox sims-fbt-checkbox">
+									<span class="a-declarative">
+										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
 												<input type="checkbox" name="offeringID.1" value="2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D" checked="" style="display: inline-block;">
 												<i class="a-icon a-icon-checkbox"></i>
@@ -104,10 +104,10 @@
 									</span>
 								</span>
 							</li>
-							<li data-p13n-asin-metadata="{&quot;ref&quot;:&quot;pd_bxgy_267_2_2&quot;,&quot;price&quot;:43.99,&quot;asin&quot;:&quot;B0002NRTMC&quot;}" class="a-spacing-mini p13n-asin">
+							<li class="a-spacing-mini p13n-asin">
 								<span class="a-list-item">
-									<span class="a-declarative" data-action="fbt-checkbox-click" data-fbt-checkbox-click="{&quot;itemNum&quot;:&quot;2&quot;,&quot;offerListingID&quot;:&quot;FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D&quot;,&quot;asin&quot;:&quot;B0002NRTMC&quot;}">
-										<div data-a-input-name="offeringID.2" class="a-checkbox sims-fbt-checkbox">
+									<span class="a-declarative">
+										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
 												<input type="checkbox" name="offeringID.2" value="FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D" checked="" style="display: inline-block;">
 												<i class="a-icon a-icon-checkbox"></i>
