Removed link targets.

--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -28,7 +28,7 @@
 						</li>
 						<li class="a-align-center sims-fbt-image-2">
 							<span class="a-list-item">
-								<a class="a-link-normal" href="/American-DJ-HAZE-G-Haze-G/dp/B0002NRTMC/ref=pd_bxgy_267_img_2?ie=UTF8&amp;psc=1&amp;refRID=77H45FM0G6NQRWGBJ309">
+								<a class="a-link-normal" href="#">
 									<div class="a-section">
 										<img alt="American DJ Haze/G" src="https://images-na.ssl-images-amazon.com/images/I/31EgPO9ISzL._AC_UL115_.jpg" class="sims-fbt-image">
 									</div>
@@ -113,7 +113,7 @@
 												<i class="a-icon a-icon-checkbox"></i>
 												<span class="a-label a-checkbox-label">
 													<div class="sims-fbt-checkbox-label">
-														<a class="a-size-base a-link-normal" href="/American-DJ-HAZE-G-Haze-G/dp/B0002NRTMC/ref=pd_bxgy_267_2?ie=UTF8&amp;psc=1&amp;refRID=77H45FM0G6NQRWGBJ309">American DJ Haze/G</a>
+														<a class="a-size-base a-link-normal" href="#">American DJ Haze/G</a>
 														<span class="a-color-price">$43.99</span>
 														<div class="a-row a-spacing-micro a-spacing-top-micro a-size-small a-color-secondary sims-fbt-seller-info">
 															<div class="a-row">
