--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -11,7 +11,7 @@
 	<h2>Frequently Bought Together</h2>
 	<div class="a-container">
 		<div>
-			<form id="sims-fbt-form" name="BuyXGetYhandleBuy" method="post" action="/gp/item-dispatch/ref=pd_bxgy_267_button_crt?ie=UTF8&amp;refRID=77H45FM0G6NQRWGBJ309" autocomplete="off">
+			<form>
 				<input type="hidden" name="session-id" value="157-7260647-1527555">
 				<input type="hidden" name="discoveredAsins.1" value="B0002NRTMC">
 				<div>
