--- a/views/style.css
+++ b/views/style.css
@@ -11,78 +11,29 @@ body
 	font-family: Arial, sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6
-{
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-
-h1,
-h2,
-h3,
-h4
-{
-	font-family: Arial, sans-serif;
-	text-rendering: optimizelegibility;
-	padding-bottom: 4px;
-}
-
 h2
 {
-	font-weight: 700;
-	font-size: 21px;
-	line-height: 1.3;
-}
+	padding: 0px 0px 4px 0px;
+	margin: 0px;
 
-.bucket h2,
-.cdInlineAskBoxTitle,
-.cdQuestionAnswerHeader,
-.pa_componentTitleTest h2,
-h2.amtcmp,
-h2.featureHeading
-{
-	color: rgb( 204, 102, 0 ) !important;
-	font-size: 16px !important;
+	text-rendering: optimizelegibility;
+
 	font-family: verdana, arial, helvetica, sans-serif !important;
+	font-size: 16px !important;
+	font-weight: 700;
+	line-height: 1.3;
+
+	color: rgb( 204, 102, 0 ) !important;
 }
 
 .a-container
 {
-	min-width: 998px;
-	padding-top: 14px;
-	padding-right: 18px;
-	padding-bottom: 18px;
-	padding-left: 18px;
-	margin-top: 0px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: auto;
-}
-
-#dp .a-container
-{
-	margin-top: 20px;
-	padding-top: 0px;
 	min-width: 996px;
+	padding: 0px 18px 18px 18px;
+	margin: 20px auto 0px auto;
 }
 
 form
-{
-	margin-bottom: 14px;
-}
-
-#sims-fbt-form
 {
 	margin-bottom: 0px;
 }
@@ -92,10 +43,7 @@ input,
 select,
 textarea
 {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
+	margin: 0px;
 	font-size: 100%;
 	vertical-align: middle;
 }
@@ -110,14 +58,6 @@ input,
 select,
 textarea
 {
-	transition-property: all;
-	-webkit-transition-property: all;
-	transition-duration: 100ms;
-	-webkit-transition-duration: 100ms;
-	transition-timing-function: linear;
-	-webkit-transition-timing-function: linear;
-	transition-delay: initial;
-	-webkit-transition-delay: initial;
 	font-family: Arial, sans-serif;
 	line-height: 19px;
 	color: rgb( 17, 17, 17 );
@@ -125,20 +65,77 @@ textarea
 
 ul
 {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 18px;
-	margin-left: 18px;
+	margin: 0px 0px 18px 18px;
+	padding: 0px;
 	color: rgb( 148, 148, 148 );
 }
 
-ol,
-ul
+ul.a-nostyle
 {
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
+	margin-left: 0px;
+	color: rgb( 17, 17, 17 );
+}
+
+ul.a-horizontal::after
+{
+	clear: both;
+}
+
+ul.a-horizontal::after,
+ul.a-horizontal::before
+{
+	display: table;
+	content: '';
+	line-height: 0;
+	font-size: 0px;
+}
+
+ul.a-horizontal
+{
+	display: block;
+	margin-left: 0px;
+}
+
+ul li
+{
+	list-style-type: disc;
+	list-style-position: initial;
+	list-style-image: initial;
+
+	word-wrap: break-word;
+	margin: 0px;
+}
+
+ul.a-nostyle li
+{
+	list-style-type: none;
+	list-style-position: initial;
+	list-style-image: initial;
+}
+
+ul.a-horizontal li
+{
+	display: inline-block;
+	margin-top: 0px;
+	margin-right: 10px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+}
+
+ul .a-list-item
+{
+	color: rgb( 17, 17, 17 );
+}
+
+ul.a-horizontal li.a-last,
+ul.a-horizontal li:last-child
+{
+	margin-right: 0px;
+}
+
+ul:last-child
+{
+	margin-bottom: 0px !important;
 }
 
 .a-spacing-base,
@@ -160,82 +157,10 @@ ul
 	vertical-align: middle;
 }
 
-ol.a-nostyle,
-ul.a-nostyle
-{
-	margin-left: 0px;
-	color: rgb( 17, 17, 17 );
-}
-
-ol.a-horizontal::after,
-ul.a-horizontal::after
-{
-	clear: both;
-}
-
-ol.a-horizontal::after,
-ol.a-horizontal::before,
-ul.a-horizontal::after,
-ul.a-horizontal::before
-{
-	display: table;
-	content: '';
-	line-height: 0;
-	font-size: 0px;
-}
-
-ol.a-horizontal,
-ul.a-horizontal
-{
-	display: block;
-	margin-left: 0px;
-}
-
-ul li
-{
-	list-style-type: disc;
-	list-style-position: initial;
-	list-style-image: initial;
-}
-
-ol li,
-ul li
-{
-	word-wrap: break-word;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-
 .a-align-center,
 .aok-align-center
 {
 	vertical-align: middle !important;
-}
-
-ol.a-nostyle li,
-ul.a-nostyle li
-{
-	list-style-type: none;
-	list-style-position: initial;
-	list-style-image: initial;
-}
-
-ol.a-horizontal li,
-ul.a-horizontal li
-{
-	display: inline-block;
-	margin-top: 0px;
-	margin-right: 10px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-
-ol .a-list-item,
-ul .a-list-item
-{
-	color: rgb( 17, 17, 17 );
 }
 
 .a-section
@@ -251,23 +176,7 @@ ul .a-list-item
 img
 {
 	max-width: 100%;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-bottom-width: 0px;
-	border-left-width: 0px;
-	border-top-style: initial;
-	border-right-style: initial;
-	border-bottom-style: initial;
-	border-left-style: initial;
-	border-top-color: initial;
-	border-right-color: initial;
-	border-bottom-color: initial;
-	border-left-color: initial;
-	border-image-source: initial;
-	border-image-slice: initial;
-	border-image-width: initial;
-	border-image-outset: initial;
-	border-image-repeat: initial;
+	border-width: 0px;
 }
 
 img
@@ -291,14 +200,6 @@ img
 .a-color-tertiary
 {
 	color: rgb( 118, 118, 118 ) !important;
-}
-
-ol.a-horizontal li.a-last,
-ol.a-horizontal li:last-child,
-ul.a-horizontal li.a-last,
-ul.a-horizontal li:last-child
-{
-	margin-right: 0px;
 }
 
 a,
@@ -354,38 +255,18 @@ a:visited
 
 .a-button
 {
-	background-image: initial;
-	background-repeat-x: initial;
-	background-repeat-y: initial;
-	background-attachment: initial;
-	background-position-x: initial;
-	background-position-y: initial;
-	background-origin: initial;
-	background-clip: initial;
 	background-color: rgb( 231, 233, 236 );
 	background-size: initial;
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;
-	border-bottom-left-radius: 3px;
+	border-radius: 3px;
 	border-top-color: rgb( 173, 177, 184 );
 	border-right-color: rgb( 162, 166, 172 );
 	border-bottom-color: rgb( 141, 144, 150 );
 	border-left-color: rgb( 162, 166, 172 );
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
-	border-top-width: 1px;
-	border-right-width: 1px;
-	border-bottom-width: 1px;
-	border-left-width: 1px;
+	border-style: solid;
+	border-width: 1px;
 	cursor: pointer;
 	display: inline-block;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
+	padding: 0px;
 	text-align: center;
 	vertical-align: middle;
 	text-decoration: none !important;
@@ -393,16 +274,7 @@ a:visited
 
 .a-button-primary
 {
-	background-image: initial;
-	background-repeat-x: initial;
-	background-repeat-y: initial;
-	background-attachment: initial;
-	background-position-x: initial;
-	background-position-y: initial;
-	background-origin: initial;
-	background-clip: initial;
 	background-color: rgb( 240, 193, 75 );
-	background-size: initial;
 	border-top-color: rgb( 168, 135, 52 );
 	border-right-color: rgb( 156, 126, 49 );
 	border-bottom-color: rgb( 132, 106, 41 );
@@ -425,42 +297,20 @@ a:visited
 {
 	display: block;
 	position: relative;
-	overflow-y: hidden;
-	overflow-x: hidden;
+	overflow: hidden;
 	height: 29px;
 	box-shadow: rgba(255, 255, 255, 0.6) 0px 1px 0px inset;
-	border-top-left-radius: 2px;
-	border-top-right-radius: 2px;
-	border-bottom-right-radius: 2px;
-	border-bottom-left-radius: 2px;
+	border-radius: 2px;
 }
 
 .a-button .a-button-inner
 {
 	background-image: linear-gradient( rgb( 247, 248, 250 ), rgb( 231, 233, 236 ) );
-	background-repeat-x: initial;
-	background-repeat-y: initial;
-	background-attachment: initial;
-	background-position-x: initial;
-	background-position-y: initial;
-	background-origin: initial;
-	background-clip: initial;
-	background-color: initial;
-	background-size: initial;
 }
 
 .a-button-primary .a-button-inner
 {
 	background-image: linear-gradient( rgb( 247, 223, 165 ), rgb( 240, 193, 75 ) );
-	background-repeat-x: initial;
-	background-repeat-y: initial;
-	background-attachment: initial;
-	background-position-x: initial;
-	background-position-y: initial;
-	background-origin: initial;
-	background-clip: initial;
-	background-color: initial;
-	background-size: initial;
 }
 
 .a-button-primary .a-button-inner
@@ -498,23 +348,7 @@ input[type="submit"]
 	position: absolute;
 	background-color: rgb( 255, 255, 255 );
 	color: rgb( 255, 255, 255 );
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-bottom-width: 0px;
-	border-left-width: 0px;
-	border-top-style: initial;
-	border-right-style: initial;
-	border-bottom-style: initial;
-	border-left-style: initial;
-	border-top-color: initial;
-	border-right-color: initial;
-	border-bottom-color: initial;
-	border-left-color: initial;
-	border-image-source: initial;
-	border-image-slice: initial;
-	border-image-width: initial;
-	border-image-outset: initial;
-	border-image-repeat: initial;
+	border-width: 0px;
 	cursor: pointer;
 	height: 100%;
 	width: 100%;
@@ -522,48 +356,21 @@ input[type="submit"]
 	top: 0px;
 	opacity: 0.01;
 	outline-width: 0px;
-	outline-color: initial;
-	outline-style: initial;
-	overflow-y: visible;
-	overflow-x: visible;
+	overflow: visible;
 	z-index: 20;
 }
 
 .a-button-text
 {
 	background-color: transparent;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-bottom-width: 0px;
-	border-left-width: 0px;
-	border-top-style: initial;
-	border-right-style: initial;
-	border-bottom-style: initial;
-	border-left-style: initial;
-	border-top-color: initial;
-	border-right-color: initial;
-	border-bottom-color: initial;
-	border-left-color: initial;
-	border-image-source: initial;
-	border-image-slice: initial;
-	border-image-width: initial;
-	border-image-outset: initial;
-	border-image-repeat: initial;
+	border-width: 0px;
 	display: block;
 	font-family: Arial, sans-serif;
 	font-size: 13px;
 	line-height: 29px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
+	margin: 0px;
 	outline-width: 0px;
-	outline-color: initial;
-	outline-style: initial;
-	padding-top: 0px;
-	padding-right: 10px;
-	padding-bottom: 0px;
-	padding-left: 11px;
+	padding: 0px;
 	text-align: center;
 	white-space: nowrap;
 }
@@ -583,10 +390,7 @@ input[type="submit"]
 	font-size: 11px;
 	height: 20px;
 	line-height: 20px;
-	padding-top: 0px;
-	padding-right: 6px;
-	padding-bottom: 0px;
-	padding-left: 7px;
+	padding: 0px 6px 0px 7px;
 }
 
 .a-button-stack .a-button:last-child
@@ -621,8 +425,7 @@ i
 	background-image: url('i.png');
 	-webkit-background-size: 400px 650px;
 	background-size: 400px 650px;
-	background-repeat-x: no-repeat;
-	background-repeat-y: no-repeat;
+	background-repeat: no-repeat;
 	display: inline-block;
 	vertical-align: top;
 }
@@ -634,47 +437,16 @@ i
 
 fieldset
 {
-	border-top-style: none;
-	border-right-style: none;
-	border-bottom-style: none;
-	border-left-style: none;
-	border-top-width: initial;
-	border-right-width: initial;
-	border-bottom-width: initial;
-	border-left-width: initial;
-	border-top-color: initial;
-	border-right-color: initial;
-	border-bottom-color: initial;
-	border-left-color: initial;
-	border-image-source: initial;
-	border-image-slice: initial;
-	border-image-width: initial;
-	border-image-outset: initial;
-	border-image-repeat: initial;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
+	border-style: none;
+	padding: 0px;
+	margin: 0px;
 }
 
 fieldset.forScreenreaders
 {
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	border-top-width: 0px;
-	border-right-width: 0px;
-	border-bottom-width: 0px;
-	border-left-width: 0px;
+	padding: 0px;
+	margin: 0px;
+	border-width: 0px;
 	clear: left;
 }
 
@@ -698,14 +470,7 @@ fieldset.forScreenreaders legend span
 	padding-right: 0px;
 	padding-bottom: 0px;
 	padding-left: 0px;
-	overflow-y: hidden;
-	overflow-x: hidden;
-}
-
-ol:last-child,
-ul:last-child
-{
-	margin-bottom: 0px !important;
+	overflow: hidden;
 }
 
 .forScreenreaders ul li
