Massive markup an style simplification.

--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -5,28 +5,21 @@
 </head>
 <body>
 
-<div id="dp">
-
-<div class="bucket">
 	<h2>Frequently Bought Together</h2>
 	<div class="a-container">
-		<div>
 			<form>
-				<input type="hidden" name="session-id" value="157-7260647-1527555">
-				<input type="hidden" name="discoveredAsins.1" value="B0002NRTMC">
-				<div>
 					<ul class="a-nostyle a-horizontal a-spacing-base a-spacing-top-base sims-fbt-image-box">
-						<li class="a-align-center sims-fbt-image-1">
+						<li class="a-align-center">
 							<span class="a-list-item">
 								<div class="a-section">
 									<img alt="American DJ Haze Generator Heaterless Fog Machine" src="https://images-na.ssl-images-amazon.com/images/I/41Mp8HpjHvL._AC_UL115_.jpg" class="sims-fbt-image">
 								</div>
 							</span>
 						</li>
-						<li class="a-align-center sims-fbt-plus-2">
+						<li class="a-align-center">
 							<span class="a-list-item a-size-large a-color-tertiary">+</span>
 						</li>
-						<li class="a-align-center sims-fbt-image-2">
+						<li class="a-align-center">
 							<span class="a-list-item">
 								<a class="a-link-normal" href="#">
 									<div class="a-section">
@@ -37,21 +30,21 @@
 						</li>
 					</ul>
 					<div class="sims-fbt-price-box">
-						<div class="sims-fbt-total-price">
-							<span class="a-size-base a-color-secondary sims-fbt-total-price-text">Total price: </span>
-							<span class="a-size-medium a-color-price sims-fbt-total-price-value">$473.98</span>
+						<div>
+							<span class="a-size-base a-color-secondary">Total price: </span>
+							<span class="a-size-medium a-color-price">$473.98</span>
 						</div>
 						<div class="sims-fbt-buttons">
 							<div class="a-button-stack a-spacing-mini">
-								<span class="a-button a-button-primary a-button-small sims-fbt-add-to-cart">
+								<span class="a-button a-button-primary a-button-small">
 									<span class="a-button-inner">
-										<input name="submit.addToCart" class="a-button-input" type="submit" aria-labelledby="a-autoid-9-announce">
+										<input class="a-button-input" type="submit">
 										<span class="a-button-text" aria-hidden="true">Add both to Cart</span>
 									</span>
 								</span>
-								<span class="a-button a-button-normal a-button-thumbnail a-button-small sims-fbt-add-to-wishlist">
+								<span class="a-button a-button-normal a-button-small">
 									<span class="a-button-inner">
-										<input name="submit.add-to-registry.wishlist" class="a-button-input" type="submit" aria-labelledby="fbt_add_to_wishlist-announce">
+										<input class="a-button-input" type="submit">
 										<span class="a-button-text a-text-center" aria-hidden="true">Add both to List</span>
 									</span>
 								</span>
@@ -60,18 +53,16 @@
 					</div>
 				</div>
 				<div class="sims-fbt-rows">
-					<fieldset class="forScreenreaders">
-						<legend><span>Buy the selected items together</span></legend>
+					<fieldset>
 						<ul class="a-nostyle a-vertical">
-							<li class="a-spacing-mini p13n-asin">
+							<li class="a-spacing-mini">
 								<span class="a-list-item">
 									<span class="a-declarative">
 										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
-												<input type="checkbox" name="offeringID.1" value="2O%2FcKrCsoOe97LNxqqwMZ7I1%2FvUKBIRzw8aer%2BljM50L3nKKWpOEC1S7MO%2Brjfp%2FHTKHFKe%2B3Xel5B0lSA8mces%2BGFHLuY1tcYGsV%2B9zwBIt7GgJzEMw2M4PjEqr%2BLei5sUotU%2FuZ2y8rle40fhhbA%3D%3D" checked="" style="display: inline-block;">
-												<i class="a-icon a-icon-checkbox"></i>
+												<input type="checkbox" checked="" style="display: inline-block;">
 												<span class="a-label a-checkbox-label">
-													<div class="sims-fbt-checkbox-label">
+													<div>
 														<span class="sims-fbt-this-item a-text-bold">This item:</span>
 														<span>American DJ Haze Generator Heaterless Fog Machine</span>
 														<span class="a-color-price">$429.99</span>
@@ -82,15 +73,14 @@
 									</span>
 								</span>
 							</li>
-							<li class="a-spacing-mini p13n-asin">
+							<li class="a-spacing-mini">
 								<span class="a-list-item">
 									<span class="a-declarative">
 										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
-												<input type="checkbox" name="offeringID.2" value="FNW3iRQf9EG6nzRzPtKbWwCNOYCnqpTIlWxl49rw082Zg1%2BN3wARemNlzn98zbVYEZRe%2FWce%2BTMiSRNCwYZkevOEO0PVNXr%2Bl3aV19INm8aBbHf3cdOvVSpAu7xiiXQuPia49oRoRjtJDpaxiDBn9A%3D%3D" checked="" style="display: inline-block;">
-												<i class="a-icon a-icon-checkbox"></i>
+												<input type="checkbox" checked="" style="display: inline-block;">
 												<span class="a-label a-checkbox-label">
-													<div class="sims-fbt-checkbox-label">
+													<div>
 														<a class="a-size-base a-link-normal" href="#">American DJ Haze/G</a>
 														<span class="a-color-price">$43.99</span>
 													</div>
@@ -102,13 +92,8 @@
 							</li>
 						</ul>
 					</fieldset>
-				</div>
 			</form>
-		</div>
 	</div>
-</div>
-
-</div>
 
 </body>
 </html>
